--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "nojes/laravel",
+    "description": "The test project for learning of Laravel PHP Framework.",
+    "keywords": ["framework", "laravel", "learning"],
     "license": "MIT",
     "type": "project",
     "require": {
