--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+
+        "barryvdh/laravel-ide-helper": "^2.4"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.0@dev",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
